--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,8 +27,9 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
+      - run: go mod tidy
       - run: go mod download
-      - run: go build -v .
+      - run: go build ./...
       - name: Run linters
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
         with:
