--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,42 +1,24 @@
-version: 2
+version: "2"
 
 run:
   timeout: 5m
   tests: true
 
-issues:
-  exclude-use-default: false
-
 linters:
   enable:
-    - errcheck
-    - gosimple
     - govet
-    - ineffassign
     - staticcheck
+    - gosimple
+    - ineffassign
+    - errcheck
     - unused
-    - gosec
     - revive
     - gocritic
-  disable:
-    - depguard
+    - gosec
 
-linters-settings:
-  revive:
-    rules:
-      - name: exported
-        severity: warning
-        disabled: false
-      - name: if-return
-        disabled: true
-  gosec:
-    excludes:
-      - G402
-  gocritic:
-    disabled-checks:
-      - ifElseChain
+issues:
+  max-issues-per-linter: 0
+  max-same-issues: 0
 
 output:
-  format: colored-line-number
-  print-issued-lines: true
-  print-linter-name: true
+  sort-results: true
