--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,19 +1,25 @@
-version: "2"
-
-run:
-  timeout: 5m
-  tests: true
-
 linters:
   enable:
+    - errcheck
+    - gosimple
     - govet
     - ineffassign
+    - staticcheck
+    - typecheck
+    - unconvert
+    - goconst
+    - goimports
+    - copyloopvar
+    - gofumpt
 
-issues:
-  max-issues-per-linter: 0
-  max-same-issues: 0
+linters-settings:
+  goimports:
+    # Put imports beginning with prefix after 3rd-party packages.
+    # It's a comma-separated list of prefixes.
+    autofix: true
+    local-prefixes: github.com/ClickHouse/terraform-provider-clickhousedbops
 
-output:
-  sort-order:
-    - linter
-    - file
+run:
+  timeout: 10m
+  skip-dirs:
+  skip-dirs-default: true
